Fix code interpreter

--- a/bioimageio_chatbot/apps/assistants/index.html
+++ b/bioimageio_chatbot/apps/assistants/index.html
@@ -131,7 +131,7 @@
       app.addMenuItem({
         label: "🧑‍💻 Code Interpreter",
         async callback() {
-          await api.createWindow({src: `${origin}/assistants/code_interpreter.imjoy.html`, w:25, h:20, name: "Code Interpreter"})
+          await api.createWindow({src: `${origin}/assistants/code-interpreter.html`, w:25, h:20, name: "Code Interpreter"})
         },
       });
       
