--- a/bioimageio_chatbot/apps/assistants/index.html
+++ b/bioimageio_chatbot/apps/assistants/index.html
@@ -120,6 +120,12 @@
         },
       });
       app.addMenuItem({
+        label: "🐒 BioImage.IO Trainer",
+        async callback() {
+          await api.createWindow({src: `${origin}/${workspace}/apps/bioimageio-chatbot-client/chat?assistant=trainer`, w:25, h:20, config: {assistant_name: "King Julien"}, name: "BioImageIO Trainer"})
+        },
+      });
+      app.addMenuItem({
         label: "🧩 Code Editor",
         async callback() {
           const plugin = await app.loadPlugin("https://if.imjoy.io")
